# AethelStream

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  shard_model.py  test_rust_loader.py
aethelStream/: .gitignore  Cargo.toml  aethelstream_report.md
aethelStream/doublepass/: Cargo.toml  DoublePass_Engine.md  MODULE5_REPORT.md  build.rs  mod5_report.md  python_smoke_test.py
aethelStream/doublepass/benches/: provider_bench.rs
aethelStream/doublepass/kernels/: fused_ce.cu  fused_ce.cuh  galore_apply.cu  galore_apply.cuh  lora_recompute.cu  lora_recompute.cuh
aethelStream/doublepass/pyref/: convergence_curves.json  reference_layer.py  reference_train.py
aethelStream/doublepass/src/: backward.rs  backward_part1.rs  checkpoint.rs  error.rs  ffi.rs  forward.rs  forward.rs.bak  ham.rs  hook.rs  lib.rs  loss.rs  math.rs  metrics.rs  parity.rs  plan.rs  precision.rs  rng.rs  sarp.rs  schedule.rs  shard_provider.rs  state.rs  train_step.rs  weight_provider.rs
aethelStream/doublepass/tests/: integration.rs  roofline.rs  shard_test.rs  test_activation_fidelity.rs  test_amortization.rs  test_checkpoint_compress.rs  test_convergence.rs  test_cut_ce.rs  test_global_clip.rs  test_ham_equivalence.rs  test_parity_guard.rs  test_parity_single_layer.rs  test_pipeline_idle.rs  test_precision_paths.rs  test_resume.rs  test_rng_determinism.rs  test_sarp_exec.rs  test_segment_recompute.rs  test_selective_recompute.rs  test_stochastic_rounding.rs
aethelStream/flowcast/: Cargo.toml  FINAL_AUDIT_REPORT.md  FLOWCAST_REPORT.md  build.rs  mod3_report.md  tests${f}.rs  tests${t}.rs
aethelStream/flowcast/benches/: flowcast_bench.rs
aethelStream/flowcast/src/: completion_router.rs  config.rs  decode.rs  error.rs  hotset.rs  lib.rs  peer.rs  priority.rs  profiler.rs  ready.rs  smart_monitor.rs  state_machine.rs  telemetry.rs  vram_double_buffer.rs  window.rs  writeback.rs
aethelStream/flowcast/src/backend/: direct_storage.rs  file_read.rs  gds.rs  mock.rs  mod.rs  super_shard.rs  uring.rs
aethelStream/flowcast/src/scheduler/: edf.rs  mod.rs  token_bucket.rs
aethelStream/flowcast/tests/: integration.rs  test_backend_selection.rs  test_cqe_retry.rs  test_determinism.rs  test_direct_storage.rs  test_gpu_idle.rs  test_hotset.rs  test_prefetch_correctness.rs  test_priority.rs  test_profiler_accuracy.rs  test_quantized_stream.rs  test_super_shard_adaptive.rs  test_thermal_monitor.rs  test_vram_double_buffer.rs  test_window_sizing.rs  test_write_skip.rs  test_writeback.rs
aethelStream/galore/: Cargo.toml  build.rs  mod4_report.md
aethelStream/galore/kernels/: galore_project.cu  galore_project.cuh  quantize_state.cu  quantize_state.cuh
aethelStream/galore/pyref/: galore_scale_independence_curves.json  galore_theorem_38_curves.json
aethelStream/galore/src/: adamw.rs  error.rs  layer_rank.rs  lib.rs  optimizer.rs  project.rs  quantize.rs  randomized_svd.rs  standard_adamw.rs  state_file.rs
aethelStream/galore/src/kernels/: mod.rs
aethelStream/galore/tests/: test_galore_projection_roundtrip.rs  test_galore_quantize_roundtrip.rs  test_galore_scale_independence.rs  test_galore_theorem_38.rs  test_optimizer_state_resume.rs
aethelStream/galore/tests/common/: mod.rs
aethelStream/ramflow/: .gitignore  Cargo.toml  RAMFLOW_MODULE2_REPORT.md  RAMFLOW_REPORT.md  build.rs  mod2_report.md
aethelStream/ramflow/benches/: ramflow_bench.rs
aethelStream/ramflow/kernels/: checkpoint_compress.cu  checkpoint_compress.cuh  mod.rs  overflow_check.cu  overflow_check.cuh  overflow_density.cu  overflow_density.cuh  stub.cu
aethelStream/ramflow/scheduler/: coscheduler.rs  pressure_gauge.rs
aethelStream/ramflow/src/: emergency.rs  error.rs  lib.rs
aethelStream/ramflow/src/allocator/: drop_guard.rs  huge.rs  mmap_tier.rs  mod.rs  numa.rs  pinned.rs
aethelStream/ramflow/src/cuda_bridge/: bindings.rs  mod.rs  stream.rs  zero_copy.rs  zero_copy.rs.bak
aethelStream/ramflow/src/kernels/: mod.rs
aethelStream/ramflow/src/nvme/: direct_storage.rs  fd_table.rs  io_uring_setup.rs  mod.rs  passthrough.rs  prefetch.rs  write_budget.rs
aethelStream/ramflow/src/phase/: classifier.rs  mod.rs  profiler.rs  rebalancer.rs
aethelStream/ramflow/src/pool/: eviction_cache.rs  mod.rs  ring_buffer.rs  slab.rs  slow_path.rs  subpools.rs  tensor_location.rs
aethelStream/ramflow/src/scheduler/: coscheduler.rs  mod.rs  pressure_gauge.rs
aethelStream/ramflow/tests/: integration.rs  test_allocation_precision.rs  test_checksums.rs  test_fragmentation.rs  test_hugepages.rs  test_io_uring.rs  test_lz4_eviction.rs  test_mmap_fallback.rs  test_numa.rs  test_nvme_passthrough.rs  test_overflow_check.rs  test_phase_classifier.rs  test_pool_exhaustion.rs  test_pressure_scheduler.rs  test_write_budget.rs  test_zero_copy.rs
aethelStream/shard_engine/: Cargo.toml  mod1_report.md  pyproject.toml
aethelStream/shard_engine/python/: __init__.py  shard_engine.py
aethelStream/shard_engine/python/models/: arch_registry.py
aethelStream/shard_engine/python/pipeline/: ghost_loader.py  partitioner.py  quantizer.py  verifier.py  writer.py
aethelStream/shard_engine/python/service/: app.py
aethelStream/shard_engine/src/: error.rs  ffi.rs  index.rs  lib.rs  loader.rs  nf4.rs
aethelStream/shard_engine/tests/: conftest.py  test_completeness.py  test_ghost_load.py  test_index_integrity.py  test_nf4_fidelity.py  test_rust_loader.py  test_rust_roundtrip.py
aethelStream/shard_engine/tests/fixtures/: shard_index.json
graphify-out/: GRAPH_REPORT.md  graph.html
rust_runtime/: Cargo.toml
rust_runtime/src/: lib.rs
sharding/: shard.py
