[package]
name = "rust_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2.3.1"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
