[package]
name        = "flowcast"
version     = "0.1.0"
edition     = "2021"

[dependencies]
# Disable ramflow's own defaults so we control whether cuda or mock-cuda
# is active from this crate.
ramflow           = { path = "../ramflow", default-features = false }
crossbeam-channel = "0.5"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "1"

[dev-dependencies]
tempfile = "3"

[features]
# Real GPU + io_uring path.
default  = []
cuda     = ["ramflow/cuda"]
# GPU-less CI path: propagates directly to ramflow/mock-cuda.
mock-cuda        = ["ramflow/mock-cuda"]
gds              = []
super-shard      = []
quantized-stream = []
write-skip       = []
multi-gpu        = []
# Pass-through: enables WriteBudgetManager SSD wear tracking in ramflow.
ssd-wear         = ["ramflow/ssd-wear"]

[lib]
name = "flowcast"
path = "src/lib.rs"
