[package]
name        = "flowcast"
version     = "0.1.0"
edition     = "2021"

[dependencies]
# Disable ramflow's own defaults so we control whether cuda or mock-cuda
# is active from this crate.
ramflow           = { path = "../ramflow", default-features = false }
crossbeam-channel = "0.5"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "1"
libc              = { version = "0.2", optional = true }

[dev-dependencies]
tempfile   = "3"
criterion  = { version = "0.5", features = ["html_reports"] }

[features]
# Real GPU + io_uring path.
default  = []
cuda     = ["ramflow/cuda"]
# GPU-less CI path: propagates directly to ramflow/mock-cuda.
mock-cuda        = ["ramflow/mock-cuda"]
gds              = []
super-shard      = []
quantized-stream = []
write-skip       = []
multi-gpu        = []
# Pass-through: enables WriteBudgetManager SSD wear tracking in ramflow.
ssd-wear         = ["ramflow/ssd-wear"]
# Windows DirectStorage backend — wraps IDStorageQueue for zero-copy SSD reads.
# Activates ramflow/direct-storage for probe + alloc helpers.
# All DirectStorage code is #[cfg(target_os = "windows")] so this feature
# compiles cleanly on Linux (used in CI: --features "mock-cuda,direct-storage").
direct-storage   = ["ramflow/direct-storage"]
# Periodic NVMe SMART temperature monitoring and re-profiling (Linux only).
ssd-thermal      = ["libc"]
# Two-slot VRAM ping-pong buffer with a dedicated copy stream to overlap
# RAM→VRAM DMA with GPU compute.  Under mock-cuda the slots are heap buffers.
cuda-double-buffer = []

[target.'cfg(windows)'.dependencies]
# Raw Windows API bindings for the DirectStorage COM queue (feature = "direct-storage").
# CreateEventW, WaitForSingleObject are used in backend/direct_storage.rs.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[[bench]]
name    = "flowcast_bench"
harness = false

[lib]
name = "flowcast"
path = "src/lib.rs"
