[package]
name        = "ramflow"
version     = "0.1.0"
edition     = "2021"
description = "AethelStream memory orchestration layer – pinned-buffer pools, NVMe I/O, CUDA bridging"
# build.rs is auto-detected; this entry makes it explicit
build       = "build.rs"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
[features]
# `cuda` is on by default — real GPU path.  Requires nvcc at build time.
default   = ["cuda"]

# Drop-in replacement for `cuda` on CI/machines without a GPU.
# Activating this disables the real CUDA link and swaps in no-op stubs.
mock-cuda = []

# Idea 4: SSD wear-budget manager.  Off by default so the critical path pays
# no cost when not needed.
ssd-wear  = ["dep:zstd"]

# `cuda` and `mock-cuda` are mutually exclusive; the build script enforces
# this at compile time.
cuda      = ["dep:io-uring"]

# NVMe block-layer bypass via IORING_OP_URING_CMD (kernel >= 6.0).
# Requires `io-uring` (enabled automatically on Linux). Falls back to the
# standard O_DIRECT path when the kernel or character device is unavailable.
# Compatible with both `cuda` and `mock-cuda`.
nvme-passthrough = ["dep:io-uring"]

# Use io_uring::split() fallback path instead of shared queue API.
# Keep this off for best performance; enable for compatibility/debugging.
io-uring-use-split = []

# Correctness-first fallback for Linux systems where io_uring setup fails.
# Uses blocking pread/pwrite on the submission path and emits normal completions.
libaio-fallback = []

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependencies]
# Structured diagnostics & Display for RamFlowError
thiserror = "1"

# Atomic primitives beyond std
crossbeam-utils = "0.8"

# Sprint 1: posix_memalign (exact-size allocation) and libc::free
# Used in src/allocator/pinned.rs and src/allocator/drop_guard.rs
libc = "0.2"

# Sprint 3A: shard_index.json parsing for TensorLocationDict
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Idea 4: SSD delta compression (zstd).  Only compiled when ssd-wear is active.
zstd       = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Memory"
] }

[target.'cfg(target_os = "linux")'.dependencies]
# io_uring bindings (used by DirectNvmeEngine)
# Pinned to 0.7.11 because this code path uses submission_shared/completion_shared.
io-uring  = { version = "=0.7.11", optional = true }

[build-dependencies]
# nothing beyond std — we shell out to nvcc manually in build.rs

# ---------------------------------------------------------------------------
# Dev-dependencies (integration tests under ramflow/tests/)
# ---------------------------------------------------------------------------
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ramflow_bench"
harness = false
