[package]
name = "shard_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "shard_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2.3.1"
thiserror = "1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
python-ffi = ["pyo3"]
mock-cuda = []
