[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "shard-engine"
version = "0.1.0"
description = "AethelStream M1 — Model Init & Sharding Engine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.35",
    "accelerate>=0.25",
    "safetensors>=0.4",
    "psutil>=5.9",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "httpx>=0.25"]

[project.scripts]
shard-engine = "python.shard_engine:main"

[tool.maturin]
features = ["python-ffi"]
python-source = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = ["slow: requires real HuggingFace model download"]
